[project]
name = "imgsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "byteplus-python-sdk-v2>=3.0.19",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "sniffio>=1.3.1",
]
